[gd_scene load_steps=11 format=3 uid="uid://dyaq4288p4ik4"]

[ext_resource type="PackedScene" uid="uid://iv3w3pu8flf7" path="res://scenes/Card/card_pack.tscn" id="1_6ttvf"]
[ext_resource type="Script" uid="uid://bcpbmavb3hrg1" path="res://scripts/Main Menu/menu_pack.gd" id="3_sidds"]
[ext_resource type="Texture2D" uid="uid://cfrwwxlom3fqo" path="res://assets/card_packs/menu_pack.png" id="4_3vpdm"]
[ext_resource type="Texture2D" uid="uid://tfue8yahjm1" path="res://assets/misc_sprites/mouse_neutral.png" id="5_p267w"]
[ext_resource type="Texture2D" uid="uid://b2im0mpr43dxu" path="res://assets/misc_sprites/mouse_right.png" id="6_c85uj"]

[sub_resource type="SpriteFrames" id="SpriteFrames_dhuel"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("5_p267w")
}, {
"duration": 1.0,
"texture": ExtResource("6_c85uj")
}, {
"duration": 1.0,
"texture": ExtResource("5_p267w")
}, {
"duration": 1.0,
"texture": ExtResource("5_p267w")
}, {
"duration": 1.0,
"texture": ExtResource("5_p267w")
}],
"loop": true,
"name": &"default",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_c85uj"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_p267w"]
resource_name = "fade"
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_dhuel"]
resource_name = "float"
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5, 1),
"transitions": PackedFloat32Array(0.517633, 2.37841, 1),
"update": 0,
"values": [Vector2(0, 0), Vector2(0, 30), Vector2(0, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_dhuel"]
_data = {
&"RESET": SubResource("Animation_c85uj"),
&"fade": SubResource("Animation_p267w"),
&"float": SubResource("Animation_dhuel")
}

[node name="TutorialCardPack" instance=ExtResource("1_6ttvf")]
script = ExtResource("3_sidds")

[node name="Sprite2D" parent="." index="1"]
texture = ExtResource("4_3vpdm")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="." index="4"]
rotation = 0.000363512
sprite_frames = SubResource("SpriteFrames_dhuel")
frame_progress = 0.628395
offset = Vector2(0, 129.87)

[node name="MouseFade" type="AnimationPlayer" parent="AnimatedSprite2D" index="0"]
libraries = {
&"": SubResource("AnimationLibrary_dhuel")
}
